--- a/was/chat-service/chat-service.yaml
+++ b/was/chat-service/chat-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: chat-service
-          image: nyamnyam.kr/nyamnyam/chat-service:89
+          image: docker.io/inseonghwang0328/nyamnyam-chat-service:latest
           ports:
             - containerPort: 8080
           resources:
@@ -34,7 +34,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: chat-service-config
+            name: chat-service
       imagePullSecrets:
         - name: nyamnyam-regcred
 ---
