--- a/was/config-server/config-server.yaml
+++ b/was/config-server/config-server.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: config-server
-          image: docker.io/yujeongoyj/nyamnyam-config-server:latest
+          image: docker.io/inseonghwang0328/nyamnyam-config-server:latest
           ports:
             - containerPort: 8888
           resources:
@@ -30,7 +30,7 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: git
             - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
-              value: https://github.com/yujeongoyj/nyamnyam-config-server.git
+              value: https://github.com/inseong6275/nyamnyam-config-server.git
             - name: SPRING_CLOUD_CONFIG_SERVER_GIT_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -47,7 +47,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: config-server-config  # ConfigMap 이름, 필요에 따라 수정
+            name: config-server
       imagePullSecrets:
         - name: nyamnyam-regcred  # 이미지 풀 비밀 이름, 맞는지 확인
 ---
