--- a/was/eureka-server/eureka-server.yaml
+++ b/was/eureka-server/eureka-server.yaml
@@ -1,17 +1,65 @@
-apiVersion: v1
-kind: Pod
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: title
-  labels:
-    role: title
+  name: eureka-server
+  namespace: nyamnyam
 spec:
-  containers:
-    - name: title
-      image: nginx
-      imagePullPolicy: IfNotPresent
-      ports:
-        - name: title
-          containerPort: 80
-          protocol: TCP
-  restartPolicy: Always
-  
+  revisionHistoryLimit: 1
+  selector:
+    matchLabels:
+      app: eureka-server
+  template:
+    metadata:
+      labels:
+        app: eureka-server
+    spec:
+      containers:
+        - name: eureka-server
+          image: docker.io/inseonghwang0328/nyamnyam-eureka-server:latest
+          ports:
+            - containerPort: 8761
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: git
+            - name: SPRING_CLOUD_EUREKA_SERVER_GIT_URI
+              value: https://github.com/inseong6275/nyamnyam-spring-cloud.git
+            - name: SPRING_CLOUD_EUREKA_SERVER_GIT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: git-credentials
+                  key: username
+            - name: SPRING_CLOUD_EUREKA_SERVER_GIT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: git-credentials
+                  key: password
+          volumeMounts:
+            - name: eureka-volume
+              mountPath: /app/config  # 설정 파일을 마운트할 경로
+      volumes:
+        - name: eureka-volume
+          configMap:
+            name: eureka-server
+      imagePullSecrets:
+        - name: nyamnyam-regcred  # 이미지 풀 비밀 이름, 맞는지 확인
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: eureka-server
+  namespace: nyamnyam
+spec:
+  ports:
+    - protocol: TCP
+      port: 8761
+      targetPort: 8761
+  selector:
+    app: eureka-server
