--- a/was/gateway-server/gateway-server.yaml
+++ b/was/gateway-server/gateway-server.yaml
@@ -1,20 +1,57 @@
-apiVersion: v1
-kind: Pod
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: title
-  labels:
-    role: title
+  name: gateway-server
+  namespace: nyamnyam
 spec:
-  containers:
-    - name: title
-      image: nginx
-      imagePullPolicy: IfNotPresent
-      ports:
-        - name: title
-          containerPort: 80
-          protocol: TCP
-  restartPolicy: Always
-
-
-
-  
+  revisionHistoryLimit: 1
+  selector:
+    matchLabels:
+      app: gateway-server
+  template:
+    metadata:
+      labels:
+        app: gateway-server
+    spec:
+      containers:
+        - name: gateway-server
+          image: docker.io/inseonghwang0328/nyamnyam-gateway-server:latest
+          ports:
+            - containerPort: 8000
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: git
+            - name: SPRING_CLOUD_CONFIG_URI
+              value: http://config-server:8888
+            - name: SPRING_APPLICATION_NAME
+              value: gateway-server
+          volumeMounts:
+            - name: gateway-volume
+              mountPath: /app/config
+      volumes:
+        - name: gateway-volume
+          configMap:
+            name: gateway-server
+      imagePullSecrets:
+        - name: nyamnyam-regcred
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gateway-server
+  namespace: nyamnyam
+spec:
+  ports:
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
+  selector:
+    app: gateway-server
