--- a/was/post-service/post-service.yaml
+++ b/was/post-service/post-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: post-service
-          image: nyamnyam.kr/nyamnyam/post-service:85
+          image: docker.io/inseonghwang0328/nyamnyam-post-service:latest
           ports:
             - containerPort: 8080
           resources:
@@ -34,7 +34,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: post-service-config
+            name: post-service
       imagePullSecrets:
         - name: nyamnyam-regcred
 ---
