--- a/was/restaurant-service/restaurant-service.yaml
+++ b/was/restaurant-service/restaurant-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: restaurant-service
-          image: nyamnyam.kr/nyamnyam/restaurant-service:68
+          image: docker.io/inseonghwang0328/nyamnyam-restaurant-service:latest
           ports:
             - containerPort: 8080
           resources:
@@ -34,7 +34,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: restaurant-service-config
+            name: restaurant-service
       imagePullSecrets:
         - name: nyamnyam-regcred
 ---
