--- a/was/user-service/user-service.yaml
+++ b/was/user-service/user-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: nyamnyam.kr/nyamnyam/user-service:206
+          image: docker.io/inseonghwang0328/nyamnyam-user-service:latest
           ports:
             - containerPort: 8080
           resources:
@@ -34,7 +34,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: user-service-config
+            name: user-service
       imagePullSecrets:
         - name: nyamnyam-regcred
 ---
