디플로이 수정: 로드밸런서로 변경해야함

--- a/was/chat-service/chat-service.yaml
+++ b/was/chat-service/chat-service.yaml
@@ -17,7 +17,7 @@ spec:
         - name: chat-service
           image: docker.io/yujeongoyj/nyamnyam-chat-service:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8002
           resources:
             requests:
               cpu: 500m
@@ -30,7 +30,7 @@ spec:
               mountPath: /app/config
           env:
             - name: SPRING_CONFIG_LOCATION
-              value: file:/app/config/application.properties
+              value: file:/app/config/application.yaml
       volumes:
         - name: config-volume
           configMap:
@@ -46,7 +46,7 @@ metadata:
 spec:
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 8002
+      targetPort: 8002
   selector:
     app: chat-service
