--- a/was/config-server/config-server.yaml
+++ b/was/config-server/config-server.yaml
@@ -27,20 +27,19 @@ spec:
               cpu: 500m
               memory: 512Mi
           env:
+            - name: SPRING_APPLICATION_NAME
+              value: config-server
             - name: SPRING_PROFILES_ACTIVE
               value: git
             - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
-              value: https://github.com/inseong6275/nyamnyam-config-server.git
-            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_USERNAME
+              value: git@github.com:yujeongoyj/nyamnyam-secret-server.git
+            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_DEFAULT_LABEL
+              value: main
+            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_PRIVATE_KEY
               valueFrom:
                 secretKeyRef:
                   name: git-credentials
-                  key: username
-            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: git-credentials
-                  key: password
+                  key: ssh-privatekey
           volumeMounts:
             - name: config-volume
               mountPath: /app/config  # 설정 파일을 마운트할 경로
@@ -57,9 +56,9 @@ metadata:
   name: config-server
   namespace: nyamnyam
 spec:
+  type: LoadBalancer
   ports:
-    - protocol: TCP
-      port: 8888
+    - port: 8888
       targetPort: 8888
   selector:
     app: config-server
