--- a/was/post-service/post-service.yaml
+++ b/was/post-service/post-service.yaml
@@ -17,7 +17,7 @@ spec:
         - name: post-service
           image: docker.io/yujeongoyj/nyamnyam-post-service:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8003
           resources:
             requests:
               cpu: 0m
@@ -30,7 +30,7 @@ spec:
               mountPath: /app/config
           env:
             - name: SPRING_CONFIG_LOCATION
-              value: file:/app/config/application.properties
+              value: file:/app/config/application.yaml
       volumes:
         - name: config-volume
           configMap:
@@ -46,7 +46,7 @@ metadata:
 spec:
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 8003
+      targetPort: 8003
   selector:
     app: post-service
