--- a/was/user-service/user-service.yaml
+++ b/was/user-service/user-service.yaml
@@ -17,20 +17,20 @@ spec:
         - name: user-service
           image: docker.io/yujeongoyj/nyamnyam-user-service:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8005
           resources:
             requests:
-              cpu: 0m
-              memory: 0Mi
+              cpu: 100m
+              memory: 256Mi
             limits:
               cpu: 500m
-              memory: 800Mi
+              memory: 512Mi
           volumeMounts:
             - name: config-volume
               mountPath: /app/config
           env:
             - name: SPRING_CONFIG_LOCATION
-              value: file:/app/config/application.properties
+              value: file:/app/config/application.yaml
       volumes:
         - name: config-volume
           configMap:
@@ -46,7 +46,7 @@ metadata:
 spec:
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 8005
+      targetPort: 8005
   selector:
     app: user-service
